--- a/MyService/src/main/resources/application.properties
+++ b/MyService/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#assign port 配置Port
 server.port=8080
+#MSSQL config
+
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=NORTHWND
+spring.datasource.username=sa
+spring.datasource.password=1111
+
+
