--- a/MyService/src/main/resources/application.properties
+++ b/MyService/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 #assign port 配置Port
 server.port=8080
+#thymelea
+spring.thymeleaf.cache = false
+spring.thymeleaf.enabled = true
+spring.thymeleaf.encoding =UTF-8
+#檔位置配置
+spring.thymeleaf.prefix = classpath:/templates/
+#副檔名
+spring.thymeleaf.suffix=.html
 #MSSQL config
-
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=NORTHWND
 spring.datasource.username=sa
 spring.datasource.password=1111
